apps/istio/gateway-ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.plantsuite.mes"
      tls:
        httpsRedirect: false # sends 301 redirect for http requests
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.plantsuite.mes"
      tls:
        mode: SIMPLE
        credentialName: plantsuite-wildcard-tls
